Feat: Update ignore files

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,16 @@
+#------------
+# Docker does not support nested .dockerignore files in contrast to
+# git and .gitignore therefore all ignores have to be added in the project root
+#------------
+
 .idea
 frontend/build
 frontend/node_modules
 backend/venv
+
+#------------
+# BACKEND
+#------------
 
 # Byte-compiled / optimized / DLL files
 backend/__pycache__/
@@ -132,3 +141,29 @@ backend/dmypy.json
 
 # Pyre type checker
 backend/.pyre/
+
+#------------
+# FRONTEND
+#------------
+
+# dependencies
+frontend/node_modules
+frontend/.pnp
+frontend/.pnp.js
+
+# testing
+frontend/coverage
+
+# production
+frontend/build
+
+# misc
+frontend/DS_Store
+frontend/env.local
+frontend/env.development.local
+frontend/env.test.local
+frontend/env.production.local
+
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
