--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,9 @@
 version: "3.9"
 services:
-  webapp:
-    image: thomaspilz/imdb-analyser
-    env:
-    - PORT: 5000
+  # webapp:
+  #   image: thomaspilz/imdb-analyser
+  #   env:
+  #   - PORT: 5000
   db:
     image: postgres:14.0-alpine
     container_name: postgres-db
@@ -20,7 +20,7 @@ services:
       # create/ mount data volume to persist data even when containers are not running
       - db-data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD", "pg_isready", "-h", "localhost", "-p", "5432"]
+      test: ["CMD", "pg_isready", "-h", "localhost", "-p", "5432", "-U", "$POSGRES_USER", "-d", "$POSGRES_DB"]
       interval: 30s
       timeout: 20s
       retries: 3
@@ -28,16 +28,16 @@ services:
     environment:
       POSTGRES_PASSWORD: simplepw
       POSTGRES_USER: admin
-      POSTGRES_DB: kpis
+      POSTGRES_DB: imdb
 
   pgadmin:
-    image: dpage/pgadmin4:6.1
+    image: dpage/pgadmin4:6.2
     container_name: pgadmin
     restart: always
     ports:
       - 80:80
     networks:
-      - mqtt-net
+      - web-net
     volumes:
     # load server configuration
       - "./pgAdmin/servers.json:/pgadmin4/servers.json"
@@ -50,3 +50,9 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@postgres.com
       PGADMIN_DEFAULT_PASSWORD: simplepw
+
+networks:
+  web-net:
+
+volumes:
+  db-data:
