--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
     "proxy": "http://localhost:5000",
     "private": true,
     "dependencies": {
+        "@chakra-ui/icons": "^1.1.1",
         "@chakra-ui/react": "^1.6.12",
         "@emotion/react": "^11.5.0",
         "@emotion/styled": "^11.3.0",
@@ -21,6 +22,7 @@
         "npm": "^8.1.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-router-dom": "^6.0.2",
         "react-scripts": "4.0.3",
         "typescript": "^4.4.4",
         "web-vitals": "^1.1.2"
