--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,25 @@
 version: "3.9"
 services:
-  # webapp:
-  #   image: thomaspilz/imdb-analyser
-  #   env:
-  #   - PORT: 5000
+  imdb-analyser:
+    image: ghcr.io/mushroomator/imdb-analyser
+    container_name: imdb-analyser
+    restart: always
+    ports:
+      - 5000:5000
+    networks:
+      - web-net
+    healthcheck:
+      test: ["CMD", "wget", "-q", "--spider", "localhost:5000/api/v1/healthcheck"]
+      interval: 10s
+      timeout: 20s
+      retries: 3
+      start_period: 5s
+    environment:
+      DB_USERNAME: admin
+      DB_HOST: postgres-db
+      DB_PASSWORD: simplepw
+      DB_DATABASE: imdb
+      DB_PORT: 5432
   db:
     image: postgres:14.0-alpine
     container_name: postgres-db
@@ -12,6 +28,12 @@ services:
       - 5432:5432
     networks:
       - web-net
+    healthcheck:
+      test: ["CMD", "pg_isready", "-h", "localhost", "-p", "5432", "-U", "admin", "-d", "imdb"]
+      interval: 10s
+      timeout: 20s
+      retries: 3
+      start_period: 5s
     volumes:
       # mount postgres config
       - "./PostgreSQL/postgresql.conf:/etc/postgresql/postgresql.conf"
@@ -19,12 +41,6 @@ services:
       - "./PostgreSQL/sql-scripts:/docker-entrypoint-initdb.d"
       # create/ mount data volume to persist data even when containers are not running
       - db-data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD", "pg_isready", "-h", "localhost", "-p", "5432", "-U", "$POSGRES_USER", "-d", "$POSGRES_DB"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
-      start_period: 30s
     environment:
       POSTGRES_PASSWORD: simplepw
       POSTGRES_USER: admin
@@ -43,10 +59,10 @@ services:
       - "./pgAdmin/servers.json:/pgadmin4/servers.json"
     healthcheck:
       test: ["CMD", "wget", "-q", "--spider" ,"localhost:80"]
-      interval: 30s
+      interval: 10s
       timeout: 20s
       retries: 3
-      start_period: 30s
+      start_period: 20s
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@postgres.com
       PGADMIN_DEFAULT_PASSWORD: simplepw
